--- a/themes/standard/standard.css
+++ b/themes/standard/standard.css
@@ -2420,22 +2420,6 @@ p {
   .accordion .accordion_item .accordion_item_body .page_footer {
     display: none; }
 
-/* Back to Top tab */
-#back_to_top {
-  background: #f7f7f7 url("images/scrollTopArrow.png") no-repeat scroll 90% 50%;
-  border: 1px solid #333333;
-  border-bottom: none;
-  bottom: 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  opacity: 100;
-  padding: 15px 50px 15px 25px;
-  position: fixed;
-  right: 2%;
-  z-index: 1000; }
-  #back_to_top a {
-    color: #222222; }
-
 /* Layout Configs */
 .clearfix:after {
   content: "";
@@ -2588,12 +2572,6 @@ table.padded-list tbody tr td {
 @media screen and (max-width: 1100px) {
   .presentation_section {
     display: none; } }
-@media screen and (max-width: 550px) {
-  #back_to_top {
-    background-position: 50% 50%;
-    padding: 25px 25px; }
-    #back_to_top a {
-      display: none; } }
 #header-content {
   max-width: 900px;
   width: 70%;
@@ -2608,6 +2586,11 @@ table.padded-list tbody tr td {
   .menu-item:hover {
     font-weight: bold; }
 
+.menu-item {
+  cursor: pointer; }
+  .menu-item:hover {
+    font-weight: bold; }
+
 .header-menu-item {
   color: white;
   display: inline-block;
@@ -2615,8 +2598,6 @@ table.padded-list tbody tr td {
   padding: 10px 0;
   text-align: center;
   width: 130px; }
-  .header-menu-item:first-of-type, .header-menu-item:last-of-type {
-    text-align: left; }
 
 #mobile-menu {
   color: white;
@@ -2668,17 +2649,25 @@ table.padded-list tbody tr td {
       width: 80%; } }
   .section-content a {
     color: #2b6fa1; }
+  .section-content img {
+    width: 100%; }
   .section-content .section-header h1 {
     margin: 0 auto;
     max-width: 500px;
     text-align: center; }
 
-input, button {
+table {
+  width: 100%; }
+  table th {
+    text-align: left; }
+
+input, textarea, button {
+  display: block;
   width: 100%; }
 
 .form input[type="text"] {
   margin-bottom: 20px; }
-.form select, .form table {
+.form select, .form table, .form textarea {
   margin-bottom: 20px;
   width: 100%; }
 
@@ -2723,6 +2712,10 @@ input[type="checkbox"] {
   height: 50px;
   width: 50px; }
 
-#chess-checklist input[type="checkbox"] {
-  width: 50px;
-  height: 30px; }
+img.specimen-image {
+  padding: 0 20%;
+  max-height: 300px;
+  object-fit: contain; }
+
+#body {
+  min-height: 500px; }
