--- a/themes/standard/standard.scss
+++ b/themes/standard/standard.scss
@@ -54,6 +54,12 @@ $hero-height: 100vh;
     font-weight: bold;
   }
 }
+.menu-item {
+  cursor: pointer;
+  &:hover {
+    font-weight: bold;
+  }
+}
 .header-menu-item {
   color: white;
   display: inline-block;
@@ -63,7 +69,6 @@ $hero-height: 100vh;
   width: 130px;
 
   &:first-of-type, &:last-of-type {
-    text-align: left;
   }
 }
 #mobile-menu {
@@ -115,6 +120,9 @@ $hero-height: 100vh;
   a {
     color: #2b6fa1;
   }
+  img {
+    width: 100%;
+  }
   .section-header {
     h1 {
       margin: 0 auto;
@@ -123,14 +131,22 @@ $hero-height: 100vh;
     }
   }
 }
-input, button {
+table {
+  width: 100%;
+
+  th {
+    text-align: left;
+  }
+}
+input, textarea, button {
+  display: block;
   width: 100%;
 }
 .form {
   input[type="text"] {
     margin-bottom: 20px;
   }
-  select, table {
+  select, table, textarea {
     margin-bottom: 20px;
     width: 100%;
   }
@@ -188,15 +204,12 @@ input, button {
     table {
       width: 100%;
     }
-  }
+ }
 }
 input[type="checkbox"] {
   height: 50px;
   width: 50px;
 }
-#chess-checklist {
-  input[type="checkbox"] {
-    width: 50px;
-    height: 30px;
-  }
+#body {
+  min-height: 500px;
 }
